fixed title overlap into navbar

--- a/format.css
+++ b/format.css
@@ -171,7 +171,7 @@ li {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  padding-top: 50px;
+  padding-top: 100px;
 }
 .work {
   margin-right: 50px;
